<resources>
    <string name="app_name">Volume Calculator</string>
    <string name="sphere">Sphere</string>
    <string name="cyclinder">Cyclinder</string>
    <string name="cube">Cube</string>
    <string name="prism">Prism</string>
    <string name="quadrangularpyramid">Quadrangular\npyramid</string>
    <string name="cone">Cone</string>
    <string name="piramid">Piramid</string>
    <string name="rightpramid">Pramid</string>
    <string name="spheresegment">Sphere\nsegments</string>
    <string name="spheresektor">Sphere\nSektor</string>
    <string name="spherelayer">Sphere\nLayer</string>
    <string name="tetrahedron">Tetrahedron</string>
    <string name="treugolpiramid">Triangular\npyramid</string>
    <string name="truncatedcone">Truncated\ncone</string>
    <string name="truncatedpiramid">Truncated\npiramid</string>
    <string name="v">"V = "</string>
    <string name="m_3">" mm&#179;"</string>
    <string name="side">Please Enter the side</string>
    <string name="btn_calculate">Calculate</string>
    <string name="please_enter_the_3_side_of_the_prism">Please Enter the 3 side of the prism</string>
    <string name="please_enter_the_2_side_of_the_prism">Please Enter the 2 side of the prism</string>
    <string name="please_enter_the_1_side_of_the_prism">Please Enter the 1 side of the prism</string>
    <string name="prism_volume">Prism Volume</string>
    <string name="sphere_volume">Sphere Volume</string>
    <string name="result">Result</string>
    <string name="cube_volume">Cube Volume</string>
    <string name="cyclinder_volume">Cyclinder Volume</string>
    <string name="cone_volume">Cone Volume</string>
    <string name="radius">Please enter the radius</string>
    <string name="pyramid_volume">Pyramid Volume</string>
    <string name="please_enter_the_square_base_of_the_pyramid">Please enter the square base of the pyramid</string>
    <string name="height">Please enter the height</string>
    <string name="quadrangular_pyramid_volume">Quadrangular Pyramid Volume</string>
    <string name="the_right_pyramid_volume">Pyramid volume</string>
    <string name="please_the_count_of_the_sides">Please the count of the sides</string>
    <string name="sphere_layer_volume">Sphere Layer Volume</string>
    <string name="please_enter_the_first_radius">Please enter the first radius</string>
    <string name="please_enter_the_second_radius">Please enter the second radius</string>
    <string name="sphere_segment_volume">Sphere segment volume</string>
    <string name="sphere_sector_volume">Sphere sector volume</string>
    <string name="tetrahedron_volume">Tetrahedron volume</string>
    <string name="triangular_pyramid_volume">Triangular pyramid volume</string>
    <string name="truncated_cone_volume">Truncated cone volume</string>
    <string name="truncated_pyramid_volume">Truncated pyramid volume</string>
    <string name="please_enter_the_first_square">Please enter the first square</string>
    <string name="please_enter_the_second_square">Please enter the second square</string>
    <string name="about">About</string>
    <string name="area_of_figures">Area of figures</string>
    <string name="shape_volume">Shape Volume</string>
    <string name="geometric_formulas">Geometric formulas</string>
    <string name="you_selected_about_section">You selected About section</string>
    <string name="you_selected_volume_section">You selected Volume section</string>
    <string name="you_selected_area_section">You selected Area section</string>
    <string name="you_selected_formulas_section">You selected Formulas section</string>
    <string name="in_development">In development</string>
    <string name="made_by_wizand0">Made by WizAnd0</string>
    <string name="github_repository">Github repository</string>
    <string name="app_version">App Version</string>
    <string name="version" translatable="false">1.5.2</string>
    <string name="about_volumeareaapp">About VolumeAreaApp</string>
    <string name="this_app_is_free_software_under_the_gnu_gpl_3_0_license">This app is free-software under the GNU GPL 3.0 license</string>
    <string name="volume_calculator">3d objects</string>
    <string name="arbitrary_triangle">Произвольный\nтреугольник</string>
    <string name="right_angled_triangle">Прямоугольный\nтреугольник</string>
    <string name="equilateral_triangle">Равносторонний\nтреугольник</string>
    <string name="arbitrary_quadrilateral">Произвольный\nчетырехугольник</string>
    <string name="parallelogram">Параллелограмм</string>
    <string name="rhomb">Ромб</string>
    <string name="Rectangle">Прямоугольник</string>
    <string name="square">Квадрат</string>
    <string name="trapezoid">Трапеция</string>
    <string name="d_polygon">Описанный\nмногоугольник</string>
    <string name="regular_polygon">Правильный\nмногоугольник</string>
    <string name="circle">Окружность\nкруг</string>
    <string name="sector">Сектор</string>
</resources>